splunknsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "East US",
      "allowedValues": [
        "Brazil South",
        "East Asia",
        "East US",
        "Japan East",
        "Japan West",
        "North Central US",
        "North Europe",
        "South Central US",
        "West Europe",
        "West US",
        "Southeast Asia",
        "Central US",
        "East US 2"
      ],
      "metadata": {
        "description": "Network Security Group Deployment Location"
      }
    },
    "networkSecurityGroupName": {
      "type": "string",
      "defaultValue":"",
      "metadata": {
        "description": "Network Security Group Name"
      }
    },
  "networkApiVersion":{
"type":"string",
"defaultValue":"2016-03-30",
"metaData":{
  "description":"API Version for the Network Resources"
}
    },
    "sshFrom": {
      "type": "string",
      "defaultValue": "0.0.0.0/0",
      "metadata": {
        "description": "CIDR block from which SSH access is allowed (default is ssh access from anywhere)"
      }
    },
    "forwardedDataFrom": {
      "type": "string",
      "defaultValue": "0.0.0.0/0",
      "metadata": {
        "description": "CIDR block from which forwarded data is allowed (default is data can be received from anywhere)"
      }
    },
    "tag": {
      "type": "object",
      "defaultValue": {
        "key1": "nsg",
        "value1": "splunk"
      },
      "metadata": {
        "description": "Tag Values"
      }
    }
  },
  "variables": {},
  "resources": [
    {
      "comments": "Network Security Group Resource",
      "apiVersion": "[parameters('networkApiVersion')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "tags": {
        "[parameters('tag').key1]": "[parameters('tag').value1]"
      },
      "properties": {
            "securityRules": [
                {
                    "name": "Allow-SSH",
                    "properties": {
                        "description": "Allows SSH traffic",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "22",
                        "sourceAddressPrefix": "[parameters('sshFrom')]",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 100,
                        "direction": "Inbound"
                    }
                },
                {
                    "name": "Allow-HTTP",
                    "properties": {
                        "description": "Allows HTTP traffic on port 8000",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "8000",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 110,
                        "direction": "Inbound"
                    }
                },
                {
                    "name": "Allow-HTTPS",
                    "properties": {
                        "description": "Allows HTTPS traffic on port 443",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "443",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 120,
                        "direction": "Inbound"
                    }
                },
                {
                    "name": "Allow-HTTP-Event-Collector",
                    "properties": {
                        "description": "Allows HTTP(S) Event Collector traffic on port 8088",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "8088",
                        "sourceAddressPrefix": "*",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 130,
                        "direction": "Inbound"
                    }
                },
                {
                    "name": "Allow-Receiver-TCP",
                    "properties": {
                        "description": "Allows receiver TCP traffic on port 9997",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "9997",
                        "sourceAddressPrefix": "[parameters('forwardedDatafrom')]",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 140,
                        "direction": "Inbound"
                    }
                },
                {
                    "name": "Allow-Mgmt-From-VNET",
                    "properties": {
                        "description": "Allows mgmt on port 8089 from VNET only",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "8089",
                        "sourceAddressPrefix": "VirtualNetwork",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 150,
                        "direction": "Inbound"
                    }
                }
            ]
      }
    }
  ]
}
